--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "author": "Rocketbot",
     "description": "Addon to install modules",
-    "version": "2.0",
+    "version": "1.2.1",
+    "type": "addon",
     "linux": true,
     "windows": true,
     "mac": true,
